# PoCAssistantZooplus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt  sonar-project.properties
.github/workflows/: docker-build.yml  quality.yml
.opencode/: opencode.json
.opencode/agents/: README.md  zooplus-conductor.md  zooplus-intent-agent.md  zooplus-logic-worker.md  zooplus-rag-pipeline.md  zooplus-rag-worker.md  zooplus-social-agent.md  zooplus-synthesis.md  zooplus-topic-guard.md
.opencode/config-cli/: opencode.json
artifacts/: README.md
artifacts/eda/: summary.json
artifacts/index/: manifest.json
artifacts/memory/: conductor_playbook.md
cli/: __init__.py  __main__.py
cli/commands/: eda.py  evaluate.py  ingest.py
data/: README.md
docs/: 00-brief-alignment.md  01-eda-report.md  02-rag-architecture.md  03-agent-flows-and-prompts.md  CHAT_UI.md  CODING_TASK_VALIDATION.md  DEMO.md  DEPENDENCIES.md  GIT_WORKFLOW.md  HISTORIA_DEL_PROYECTO.md  INTERVIEW_DEFENSE.md  MINIMAL_FUNCTIONAL.md  PROJECT_FEATURES.md  PROJECT_WORK_HISTORY.md  QUALITY.md  QUICKSTART.md  README.md  RELEASE_PLAN.md  RELEASE_v0.1.md  RELEASE_v2.4.0.md  RELEASE_v2.5.0.md  RUNBOOK.md  TESTING_GUARDRAILS.md  TRY_LOCAL.md
docs/constraints/: topic-boundary.md
docs/deploy/: CLOUD_RUN.md
docs/incidents/: INC-001-synthesis-500.md  INC-002-external-search-guard.md  INC-003-hybrid-candidate-pool.md  README.md
docs/instructions/: ACCEPTANCE.md  AGENTIC_SOCIAL.md  AGENT_BUNDLE.md  Coding Task.docx  USE_CASES.md  product_catalog_dataset.json
docs/interview/: EVIDENCE_SNAPSHOT.md
docs/plans/: PROPOSAL.md  zooplus-poc-chatbot-plan.md
docs/trace/: PROGRESS.md  README.md  T-quality-gates.md  T0-repo-bootstrap.md  T1-eda-run.md  T2-rag-index.md  T3-opencode-mcp-agents.md  T4-dual-lane-acp.md  T5-api-contract.md  T6-readme-submission.md  _TEMPLATE.md
plans/: RELEASE_v0.1_ROADMAP.md  v2.0-conductor-orchestrator.md  zooplus-opencode-agents-enrichment.md
scripts/: build_use_case_matrix.py  build_work_history.py  demo_all.py  deploy_smoke.py  export_interview_evidence.py  patch_interview_pptx_agentic_ux.py  patch_interview_pptx_fr1_async.py  patch_interview_pptx_fr_code_panels.py  patch_interview_pptx_rag_slides.py  patch_interview_pptx_v14_live_loop.py  patch_interview_pptx_v20_conductor.py  resolve_python.py  run_agentic_tests.ps1  run_dev.ps1  run_quality_gates.py  run_release_fast.ps1  run_release_verify.ps1  run_use_case_matrix.py  setup_opencode_local.ps1  setup_wizard.cmd  setup_wizard.ps1  smoke_minimal.ps1  stop_dev.ps1  topic_guard_load_test.py
src/: __init__.py  config.py
src/acp/: __init__.py  dispatcher.py  envelopes.py
src/agents/: __init__.py  agent_body.py  agent_cascade.py  agent_models.py  conductor_orchestrator.py  conductor_playbook.md  handoff.py  instructions_skill.py  intent_agent.py  intent_hints.py  phrase_index.py  prompts.py  registry.py  request_context.py  run_meta.py  social_agent.py  stream_voice_registry.py
src/api/: app.py
src/cache/: __init__.py  redis_store.py  session_turn.py  ttl_cache.py
src/guardian/: __init__.py  benchmark.py  constraints.yaml  engine.py
src/lanes/: customer_status.py  interactive.py  orchestrator.py  process.py  stream.py
src/llm/: __init__.py  answer_sanitize.py  conversation.py  language.py  language_context.py  opencode.py  opencode_models.py  response_variety.py  synthesis.py  template.py
src/mcp_server/: __init__.py  (+1 more)
tests/: conftest.py  test_health.py  test_rag_index.py
(+120 files in other folders)
