[project]
name = "zooplus-assistant-poc"
version = "0.1.0"
description = "zooplus Assistant — take-home PoC (FastAPI + RAG + agent-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
rag = ["chromadb>=0.5", "beautifulsoup4>=4.12"]

[project.scripts]
zooplus-cli = "cli.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
