[project]
name = "zooplus-assistant-poc"
version = "0.1.0"
description = "zooplus Assistant — take-home PoC (FastAPI + RAG + agent-first)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
rag = ["chromadb>=0.5", "beautifulsoup4>=4.12"]

[project.scripts]
zooplus-cli = "cli.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast tests, no vector DB",
  "integration: API + Chroma (local)",
  "e2e: full PoC path smoke",
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient`:UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["cli", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends in routes (future)

[tool.ruff.lint.per-file-ignores]
"cli/commands/eda.py" = ["E501"]
"src/rag/chunking.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
