[project]
name = "zooplus-assistant-poc"
version = "2.2.0"
description = "zooplus Assistant — take-home PoC (FastAPI + RAG + agent-first)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.32.0,<0.35.0",
  "pydantic>=2.9.0,<3.0.0",
  "httpx>=0.27.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<0.25.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "ruff>=0.8.0,<0.10.0",
]
rag = [
  "chromadb>=0.5.23,<0.6.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.scripts]
zooplus-cli = "cli.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "unit: fast tests, no vector DB",
  "integration: API + Chroma (local)",
  "e2e: full PoC path smoke",
]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient`:UserWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["cli", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends in routes (future)

[tool.ruff.lint.per-file-ignores]
"cli/commands/eda.py" = ["E501"]
"src/rag/chunking.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
